# catsay

./: README.md  catsay  go.mod  install.ps1  install.sh  main.go  term_unix.go  term_windows.go
.github/workflows/: publish-pypi.yml  release.yml
npm/: install.js  package.json
python/: README.md  pyproject.toml
python/catsay/: __init__.py  __main__.py  _binary.py
